--- a/KotlinLab_Dice/app/src/main/res/layout/activity_main.xml
+++ b/KotlinLab_Dice/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/txt_messaage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="35sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/btn_roll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="@string/roll"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_messaage" />
+        app:layout_constraintTop_toBottomOf="@+id/lyt_dice_container" />
+
+    <LinearLayout
+        android:id="@+id/lyt_dice_container"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center"
+        app:layout_constraintVertical_bias="0.416"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/img_first_dice"
+            android:layout_width="100dp"
+            android:layout_margin="20dp"
+            android:layout_height="100dp"
+            tools:srcCompat="@drawable/dice_1" />
+        <ImageView
+            android:id="@+id/img_second_dice"
+            android:layout_width="100dp"
+            android:layout_margin="20dp"
+            android:layout_height="100dp"
+            tools:srcCompat="@drawable/dice_1" />
+
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
